k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: hireflow

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
